<resources>
    <string name="app_name">A4</string>
    <string name="action_settings">Settings</string>

    <string name="billAmount">Bill Amount</string>
    <string name="percent">Percent</string>
    <string name="tempPercent">0%</string>
    <string name="tipString">Tip</string>
    <string name="tempTip">$0.00</string>
    <string name="totalText">Total</string>
    <string name="tempTotal">$0.00</string>
    <string name="splitText">Split Bill?</string>
    <string name="perPersonText">Per Person</string>
    <string name="tempPer">$0.00</string>
</resources>
