<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billAmount"
            android:id="@+id/billAmount"
            android:textSize="16dp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/billText"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:id="@+id/percentText"
            android:textStyle="bold"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempPercent"
            android:id="@+id/percentTV"
            android:layout_marginLeft="40dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percentSB"
            android:layout_weight="1"
            android:max="30"
            android:progress="0"
            android:layout_marginLeft="8dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipString"
            android:id="@+id/tipText"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempTip"
            android:id="@+id/tipTV"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="72dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalText"
            android:id="@+id/totalText"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempTotal"
            android:id="@+id/totalTV"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="60dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splitText"
            android:id="@+id/splitText"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:layout_width="96dp"
            android:layout_height="20dp"
            android:id="@+id/splitSpin"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:entries="@array/spinner_array"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:id="@+id/perPersonLinear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perPersonText"
            android:id="@+id/perPerson"
            android:layout_gravity="center_vertical"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempPer"
            android:id="@+id/perPersonTV"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp" />
    </LinearLayout>

</LinearLayout>
